Use List.of() to ensure immutability